Reuploading with changes from reviewer

--- a/Assignment 1.ipynb
+++ b/Assignment 1.ipynb
@@ -6,9 +6,12 @@
    "metadata": {},
    "source": [
     "# Udacity Data Science Nanodegree\n",
-    "### Assignment 1\n",
+    "## Assignment 1\n",
     "\n",
-    "I chose the Seattle AirBnB dataset as I live in Seattle and it seemed like a good place to start. \n",
+    "### CRISP-DM Process:\n",
+    "\n",
+    "#### Business Understanding\n",
+    "I chose the Seattle AirBnB dataset as I live in Seattle and it seemed like a good place to start. There are a lot of headlines about the impact of AirBNB on the housing and rental market in the United States. As someone who also works in equitable housing, I wanted to dig into some of the data to see if there are any interesting correlations between the AirBNB hosts who have many listings in an area, and whether the ratings of the listings are positive or negative.\n",
     "\n",
     "The questions are regarding the the relationship between hosts and their ratings such as:\n",
     "- Do hosts with more listings correlate to lower overall review scores?\n",
@@ -32,6 +35,14 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score, mean_squared_error\n",
     "%matplotlib inline\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54c85b06",
+   "metadata": {},
+   "source": [
+    "#### Data Understanding"
    ]
   },
   {
@@ -300,6 +311,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5f112ed5",
+   "metadata": {},
+   "source": [
+    "#### Prepare Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Question 1: \n",
@@ -390,6 +409,14 @@
    "source": [
     "multi_host_df = listings_df[['host_id', 'host_total_listings_count', 'review_scores_rating']].groupby('host_id').count().sort_values(by='review_scores_rating', ascending=False)\n",
     "multi_host_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bad436b",
+   "metadata": {},
+   "source": [
+    "#### Data Modeling\n"
    ]
   },
   {
@@ -880,6 +907,14 @@
     "plt.xlabel('Number of Reviews')\n",
     "plt.ylabel('Number of Listings')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bab4e27",
+   "metadata": {},
+   "source": [
+    "#### Evaluate the Results"
    ]
   },
   {
