Reuploading with suggestions from reviewer

--- a/Assignment 1.ipynb
+++ b/Assignment 1.ipynb
@@ -407,6 +407,8 @@
     }
    ],
    "source": [
+    "# creating a dataframe for listings of hosts with muliple listings\n",
+    " \n",
     "multi_host_df = listings_df[['host_id', 'host_total_listings_count', 'review_scores_rating']].groupby('host_id').count().sort_values(by='review_scores_rating', ascending=False)\n",
     "multi_host_df.head()"
    ]
@@ -476,12 +478,14 @@
    ],
    "source": [
     "# Using linear regression to see what the correlation between the two is\n",
+    "\n",
     "X = multi_host_df[['host_total_listings_count']]\n",
     "y = multi_host_df['review_scores_rating']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "lr_model = LinearRegression()\n",
     "lr_model.fit(X_train, y_train)\n",
     "y_predict = lr_model.predict(X_test)\n",
+    "\n",
     "# Printing the r-squared score, which determines how well the model fits the data.\n",
     "# R-squared ranges from 0 to 1, so we want to see a high number here\n",
     "print(f\"Model Score: {lr_model.score(X_test, y_test)}.\")\n",
@@ -536,6 +540,7 @@
     }
    ],
    "source": [
+    "# Count of listings by host_id\n",
     "listings_df['host_id'].value_counts()"
    ]
   },
@@ -700,7 +705,9 @@
     }
    ],
    "source": [
-    "many_reviews = listings_df[['host_id', 'number_of_reviews', 'calculated_host_listings_count', 'review_scores_rating']].groupby('host_id').count().sort_values(by='host_id', ascending=False)\n",
+    "# creating a dataframe for listings of hosts along with overall review scores\n",
+    "\n",
+    "wany_reviews = listings_df[['host_id', 'number_of_reviews', 'calculated_host_listings_count', 'review_scores_rating']].groupby('host_id').count().sort_values(by='host_id', ascending=False)\n",
     "many_reviews['avg_review_score'] = many_reviews['review_scores_rating']/many_reviews['number_of_reviews']\n",
     "many_reviews.sort_values(by='number_of_reviews', ascending=False)\n"
    ]
@@ -710,6 +717,7 @@
    "id": "e4561cdd",
    "metadata": {},
    "source": [
+    "#### Modelling\n",
     " For a property with more ratings, we can assume that the more people have stayed there and have been more exposed to the host and the listing.\n",
     " For this reason, we can assume that having more reviews is a good thing. \n",
     "\n",
@@ -765,6 +773,7 @@
    "id": "f9f2f4d9",
    "metadata": {},
    "source": [
+    "#### Evaluating the Model\n",
     "This indicates that the number of reviews does not impact the review_scores_rating."
    ]
   },
@@ -798,6 +807,7 @@
     }
    ],
    "source": [
+    "# Determine the count of each cancellation policy\n",
     "strict_pol = listings_df[['host_id', 'number_of_reviews', 'calculated_host_listings_count', 'review_scores_rating', 'cancellation_policy']]\n",
     "strict_pol.cancellation_policy.value_counts()"
    ]
@@ -807,6 +817,7 @@
    "id": "a6335c48",
    "metadata": {},
    "source": [
+    "#### Data Modeling\n",
     "We will first see if there is any correlation between the number of reviews per listing and the quality of the reviews."
    ]
   },
