Incorporating feedback from reviewer for resubmission.

--- a/Assignment 1.ipynb
+++ b/Assignment 1.ipynb
@@ -434,20 +434,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 128,
    "id": "723e265c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define a function to fit and train a linear regresstion model on the data\n",
-    "def run_lr_model(df, x_col, y_col):\n",
+    "def run_lr_model(df, X_col, y_col):\n",
     "    \"\"\"\n",
     "    This function takes a dataframe, the column to be used as the \n",
     "    independent variable, and the column to be used as the dependent\n",
     "    variable, and runs a linear regression model on that data.\n",
     "    The function prints the r-squared score and the mean squared error.\n",
+    "    input:\n",
+    "        df: dataframe\n",
+    "        X_col: X variable column name\n",
+    "        y_col: y variable column name\n",
+    "    output:\n",
+    "        model: linear regression model\n",
     "    \"\"\"\n",
-    "    X = df[[x_col]]\n",
+    "    X = df[[X_col]]\n",
     "    y = df[y_col]\n",
     "    # Split data into training and testing sets\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
@@ -503,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 130,
    "id": "75027018",
    "metadata": {},
    "outputs": [
@@ -518,7 +524,7 @@
    ],
    "source": [
     "# Using linear regression to see what the correlation between the two is\n",
-    "run_lr_model(multi_host_df, 'host_total_listings_count', 'review_scores_rating')\n"
+    "run_lr_model(multi_host_df, 'host_total_listings_count', 'review_scores_rating')"
    ]
   },
   {
@@ -979,15 +985,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 131,
    "id": "99c063ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop the Nan values in the review_scores_rating column\n",
+    "# Drop the Nan values in the review_scores_rating column to use in the model\n",
     "strict_df = strict_df.dropna(subset=['review_scores_rating'])\n",
     "\n",
-    "# Expand the cancellation_policy column to one hot encoding\n",
+    "# Expand the cancellation_policy column to one hot encoding so that each policy category is a separate column.\n",
     "strict_pol_dummies = pd.get_dummies(strict_df['cancellation_policy'], prefix='cancellation_policy')\n",
     "\n",
     "# Append these to the original dataframe:\n",
@@ -996,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 132,
    "id": "f6ead2a0",
    "metadata": {},
    "outputs": [
