--- a/Assignment 1.ipynb
+++ b/Assignment 1.ipynb
@@ -20,19 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 133,
    "id": "8daef38c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The pycodestyle_magic extension is already loaded. To reload it, use:\n",
-      "  %reload_ext pycodestyle_magic\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import Modules\n",
     "\n",
@@ -42,9 +33,24 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score, mean_squared_error\n",
-    "%load_ext pycodestyle_magic\n",
     "%matplotlib inline\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "eec2b90f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not open requirements file: [Errno 2] No such file or directory: 'requirements.txt'\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
